# autoware_universe

./: versions.json
.github/: CODEOWNERS
common/autoware_adapi_specs/: package.xml
common/autoware_auto_common/include/autoware_auto_common/common/: types.hpp
common/autoware_object_recognition_utils/include/autoware/object_recognition_utils/: object_classification.hpp
common/autoware_test_utils/: CMakeLists.txt
common/autoware_universe_utils/: CMakeLists.txt
common/autoware_vehicle_info_utils/: package.xml
control/autoware_autonomous_emergency_braking/: CMakeLists.txt
control/autoware_joy_controller/: package.xml
control/autoware_smart_mpc_trajectory_follower/: CMakeLists.txt  package.xml
control/predicted_path_checker/: CMakeLists.txt
evaluator/kinematic_evaluator/: package.xml
evaluator/localization_evaluator/: package.xml
evaluator/perception_online_evaluator/include/perception_online_evaluator/: parameters.hpp
latest/control/autoware_shift_decider/: index.html
latest/localization/autoware_landmark_based_localizer/autoware_lidar_marker_localizer/: index.html
latest/planning/autoware_costmap_generator/: index.html
latest/planning/autoware_mission_planner_universe/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_bidirectional_traffic_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_goal_planner_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_lane_change_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_side_shift_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_start_planner_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_static_obstacle_avoidance_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_blind_spot_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_crosswalk_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_intersection_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_virtual_traffic_light_module/: index.html
latest/sensing/autoware_pointcloud_preprocessor/docs/ring-outlier-filter/: index.html
localization/autoware_localization_util/: package.xml
localization/yabloc/yabloc_common/: CMakeLists.txt
main/planning/autoware_mission_planner_universe/: index.html
main/planning/autoware_path_smoother/docs/eb/: index.html
main/planning/autoware_scenario_selector/: index.html
main/planning/autoware_surround_obstacle_checker/: index.html
main/planning/autoware_surround_obstacle_checker/surround_obstacle_checker-design.ja/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_bidirectional_traffic_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_goal_planner_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_lane_change_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_side_shift_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_start_planner_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_static_obstacle_avoidance_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_blind_spot_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_crosswalk_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_detection_area_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_intersection_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_no_stopping_area_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_occlusion_spot_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_run_out_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_virtual_traffic_light_module/: index.html
main/sensing/autoware_pointcloud_preprocessor/docs/ring-outlier-filter/: index.html
map/autoware_map_loader/: package.xml
perception/autoware_bytetrack/: package.xml
perception/autoware_elevation_map_loader/: CMakeLists.txt  package.xml
perception/autoware_lidar_centerpoint/include/autoware/lidar_centerpoint/: centerpoint_config.hpp
perception/autoware_lidar_transfusion/include/autoware/lidar_transfusion/: transfusion_config.hpp
perception/autoware_multi_object_tracker/src/: multi_object_tracker_node.cpp
perception/autoware_radar_object_tracker/: package.xml
perception/autoware_traffic_light_classifier/: package.xml
perception/autoware_traffic_light_visualization/: CMakeLists.txt  package.xml
perception/autoware_traffic_light_visualization/src/traffic_light_roi_visualizer/: shape_draw.hpp
planning/autoware_freespace_planning_algorithms/: CMakeLists.txt
planning/autoware_mission_planner/: package.xml
planning/autoware_obstacle_cruise_planner/src/: node.cpp
planning/autoware_obstacle_stop_planner/: CMakeLists.txt
planning/autoware_static_centerline_generator/: package.xml
planning/behavior_path_planner/autoware_behavior_path_planner_common/: CMakeLists.txt
planning/behavior_path_planner/autoware_behavior_path_planner_common/src/utils/drivable_area_expansion/: footprints.cpp
planning/behavior_velocity_planner/autoware_behavior_velocity_planner/: package.xml
sensing/autoware_gnss_poser/: CMakeLists.txt
system/diagnostic_graph_aggregator/: CMakeLists.txt  package.xml
system/system_monitor/include/system_monitor/: system_monitor_utility.hpp
system/system_monitor/reader/traffic_reader/: traffic_reader_service.cpp
system/system_monitor/src/cpu_monitor/: cpu_monitor_base.cpp  intel_cpu_monitor.cpp
system/velodyne_monitor/: CMakeLists.txt  package.xml
vehicle/autoware_raw_vehicle_cmd_converter/: package.xml
(+11 files in other folders)
